--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfume | House</title>
 </head>
 <body>
     
+    <div class="header" id="header">
+
+        <div class="container">
+            <div class="navBar">
+                <li><a href="#">الرئيسية</a></li>
+                <li><a href="#">الرئيسية</a></li>
+                <li><a href="#">الرئيسية</a></li>
+                <li><a href="#">الرئيسية</a></li>
+                <li><a href="#">الرئيسية</a></li>
+            </div>
+            <a href="">Perfume|House</a>
+        </div>
+    </div>
+
 </body>
 </html>
